--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
-<head<!DOCTYPE html>
-  <html>
-    <head>
-      <title>Reservly - Andrew's demo</title>
-    </head>
-    <body>
+<html>
+  <head>
+    <title>Reserv.ly demo</title>
+  </head>
+  <body>
       <div id="photo-gallery"></div>
       <div id="reservations"></div>
       <div id="menus"></div>
       <div id="reviews"></div>
-      <script type="text/javascript" src="http://localhost:3001/bundle.js"></script>
-      <script type="text/javascript" src="http://localhost:3002/bundle.js"></script>
-      <script type="text/javascript" src="http://localhost:3003/bundle.js"></script>
-      <script type="text/javascript" src="http://localhost:3004/bundle.js"></script>
+      <script type="text/javascript" src="http://13.57.252.210/bundle.js"></script>
+      <script type="text/javascript" src="http://54.200.32.135/bundle.js"></script>
+      <script type="text/javascript" src="http://18.219.221.244/bundle.js"></script>
+      <script type="text/javascript" src="http://18.223.115.5/bundle.js"></script>
     </body>
   </html>
